<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Transact Quota</string>
    <string name="settings_label">Account Details</string>
    <string name="settings_title">Transact Account Details</string>
    <string name="settings_shortcut">s</string>
    <string name="username_title">Username</string>
    <string name="username_summary">Transact Username</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Transact Password</string>
    <string name="peak_usage">Peak Usage (GB)</string>
    <string name="offpeak_usage">Off Peak Usage (GB)</string>
    <string name="refresh_label">Refresh</string>
    <string name="settings_missing_label">Username and Password are not set.</string>
    <string name="exit_label">Exit</string>
    <string name="invalid_account_details">Account Details are incorrect</string>
    <string name="loading">Loading ...</string>
    <string name="wifi_not_enabled">Current Network connection is not wifi!</string>
    <string name="authentication_settings">Authentication</string>
    <string name="tunneling_settings">Tunnelling</string>
    <string name="enable_tunneling_label">Enable Tunnelling</string>
    <string name="ssh_proxy_host">Ssh Host</string>
    <string name="ssh_proxy_port">Ssh Port</string>
    <string name="ssh_username">Ssh Username</string>
    <string name="ssh_pubkey">Ssh Private Key</string>
    <string name="ssh_password">Ssh Password or Passphrase</string>
    <string name="pref_account_username">account.username</string>
    <string name="pref_account_password">account.password</string>
    <string name="pref_enable_tunnel">tunneling.enable</string>
    <string name="pref_ssh_proxy_host">ssh.proxy.host</string>
    <string name="pref_ssh_proxy_port">ssh.proxy.port</string>
    <string name="pref_ssh_username">ssh.username</string>
    <string name="pref_ssh_pubkey">ssh.pubkey</string>
    <string name="pref_ssh_password">ssh.password</string>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">Transact Quota has crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">Transact Quota has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
</resources>