<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orderingFromXml="true">

    <PreferenceCategory android:title="@string/authentication_settings">
        <EditTextPreference
            android:defaultValue=""
            android:key="account.username"
            android:summary="@string/username_summary"
            android:title="@string/username_title" />
        <EditTextPreference
            android:defaultValue=""
            android:key="account.username"
            android:summary="@string/password_summary"
            android:title="@string/password_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/tunneling_settings">
        <EditTextPreference
            android:defaultValue=""
            android:key="account.username"
            android:summary="@string/username_summary"
            android:title="@string/username_title" />
        <EditTextPreference
            android:defaultValue=""
            android:key="account.username"
            android:summary="@string/password_summary"
            android:title="@string/password_title" />
    </PreferenceCategory>

</PreferenceScreen>